# Book_Review

./: .gitignore  .pyproject.toml.swp  .python-version.swp  Makefile  README.md  application.py  db  pyproject.toml  requirement.txt  requirements.txt  sql_app.db  webconnect.py
.github/: pull_request.yaml
.github/workflows/: pull_request.yaml
sql_app/: crud.py  database.py  models.py  schemas.py
static/css/: styles.css
templates/: article.html  frontpage.html  information.html  layout-reviews.html  reviews.html
tests/: test_app.py
