[tool.poetry]
name = "book_review"
version = "0.1.0"
description = "repository housing the source code for Jaborgs book reviews"
authors = ["Jacob Sadiq <jlappins@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
Jinja2 = "^3.0.3"
SQLAlchemy = "^1.4.32"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
pytest = "^6.2.5"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
